--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>checked.png">
+    <!-- <script src=<%= BASE_URL %>/tinymce4.7.5/tinymce.min.js></script> -->
+    <script src="<%= BASE_URL %>tinymce4.7.5/tinymce.min.js"></script>
     <title>my-antd-vue-pro</title>
   </head>
   <body>
